--- a/dapp/react-app/src/components/navbar.css
+++ b/dapp/react-app/src/components/navbar.css
@@ -39,10 +39,11 @@
     margin-top: 1.2vh;
 }
 
-.gotham3 {
+.gotham3-pixel {
     width: 10vw;
-    height: 2vw;
+    height: 2.2vw;
     margin-top: 1.2vh;
+    margin-left: 0.2vw;
 }
 
 .tool {
