--- a/dapp/react-app/src/pages/rank/rank.css
+++ b/dapp/react-app/src/pages/rank/rank.css
@@ -5,7 +5,7 @@
 
 .table {
     width: 63vw;
-    margin-top: 3vh;
+    margin-top: 2vh;
     margin-left: 3vw;
 }
 
@@ -125,4 +125,20 @@
     font-weight: var(--weight-400);
     font-size: 1.5vw;
     line-height: 3.8vw;
+    user-select: none;
+}
+
+.type-select-block {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.rank-center .mark-select,
+.arbi-center .mark-select {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 3.5vw;
 }
